# Copyright (c) 2020-2021 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# RA4E1
add_library(mbed-ra4e1 INTERFACE)

target_include_directories(mbed-ra4e1
    INTERFACE
        ../ra/fsp/src/bsp/mcu/ra4e1
        ../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/inc/api
        ../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/inc/instances
        ../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/private/inc
        .
)

target_sources(mbed-ra4e1
    INTERFACE
        gpio_irq_device.c
        uart_device.c
        can_device.c
        ../ra/fsp/src/bsp/mcu/ra4e1/bsp_linker.c
		../ra/fsp/src/r_adc/r_adc.c
		../ra/fsp/src/r_agt/r_agt.c
		../ra/fsp/src/r_cac/r_cac.c
		../ra/fsp/src/r_can/r_can.c
		../ra/fsp/src/r_cgc/r_cgc.c
		../ra/fsp/src/r_crc/r_crc.c
		../ra/fsp/src/r_dac/r_dac.c
		../ra/fsp/src/r_dmac/r_dmac.c
		../ra/fsp/src/r_doc/r_doc.c
		../ra/fsp/src/r_dtc/r_dtc.c
		../ra/fsp/src/r_elc/r_elc.c
		../ra/fsp/src/r_flash_hp/r_flash_hp.c
		../ra/fsp/src/r_gpt/r_gpt.c
		../ra/fsp/src/r_gpt_three_phase/r_gpt_three_phase.c
		../ra/fsp/src/r_icu/r_icu.c
		../ra/fsp/src/r_iic_master/r_iic_master.c
		../ra/fsp/src/r_iic_slave/r_iic_slave.c
		../ra/fsp/src/r_ioport/r_ioport.c
		../ra/fsp/src/r_iwdt/r_iwdt.c
		../ra/fsp/src/r_lpm/r_lpm.c
		../ra/fsp/src/r_lvd/r_lvd.c
		../ra/fsp/src/r_poeg/r_poeg.c
		../ra/fsp/src/r_qspi/r_qspi.c
		../ra/fsp/src/r_rtc/r_rtc.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func000.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func001.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func002.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func003.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func004.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func005.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func006.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func007.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func008.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func009.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func010.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func011.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func022.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func023.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func025.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func027.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func028.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func030.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func040.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func043.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func044.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func048.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func049.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func050.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func051.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func052.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func053.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func054.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func057.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func059.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func060.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func061.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func062.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func063.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func064.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func068.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func069.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func070.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func071.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func073.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func074.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func075.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func076.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func077.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func080.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func081.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func100.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func101.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func102.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func103.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func200.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func202.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func205.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func206.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func207.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func300.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func301.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func302.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func303.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func304.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func305.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func307.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func308.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func309.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func310.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func311.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func312.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func313.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func314.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func315.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func316.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func317.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func318.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func319.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func320.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func321.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func322.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func323.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func324.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_func325.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p00.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p07.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p08.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p20.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p21.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p26.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p29a.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p29f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p29i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p29t.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p29u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p2a.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p2b.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p32a.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p32f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p32i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p32t.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p32u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p34a.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p34f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p34i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p34t.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p34u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p36a.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p36f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p36i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p36t.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p36u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p40.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p41f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p41i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p41u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p44f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p44i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p44u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p47f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p47i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p47u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p50f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p50i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p50u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p53.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p54.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p56.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p57.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p5a.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p5aIA.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p5b.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p5c.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p5d.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p6f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p72.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p76f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p76i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p76u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p79.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p7b.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p81.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p82.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p8f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p90.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p92.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p95f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p95i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p95u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p98f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p98i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p98u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_p9e.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pa1f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pa1i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pa1u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pa4f.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pa4i.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pa4u.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pdf.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe0.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe1.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe2.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe3.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe4.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe5.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe6.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe7.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe8.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pe9.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pf0.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pf1.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pf4.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pf5.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pf6.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_pf9.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_subprc01.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_subprc03.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/r_sce_subprc04.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/primitive/s_flash2.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/private/r_sce_private.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/public/r_sce.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/public/r_sce_aes.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/public/r_sce_ecc.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/public/r_sce_rsa.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/public/r_sce_sha.c
		../ra/fsp/src/r_sce_protected/crypto_procedures_protected/src/sce9/public/r_sce_tls.c
		../ra/fsp/src/r_sci_i2c/r_sci_i2c.c
		../ra/fsp/src/r_sci_lin/r_sci_lin.c
		../ra/fsp/src/r_sci_smci/r_sci_smci.c
		../ra/fsp/src/r_sci_spi/r_sci_spi.c
		../ra/fsp/src/r_sci_uart/r_sci_uart.c
		../ra/fsp/src/r_spi/r_spi.c
		../ra/fsp/src/r_wdt/r_wdt.c
)

target_link_libraries(mbed-ra4e1 INTERFACE mbed-renesas-ra)
if(${MBED_TOOLCHAIN} STREQUAL "GCC_ARM")
	mbed_set_linker_script(mbed-ra4e1 ../ra/fsp/src/bsp/mcu/ra4e1/RA4E1.ld)
endif()

add_subdirectory(TARGET_FPB_RA4E1 EXCLUDE_FROM_ALL)
